<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/page_txt"
                android:id="@+id/textView"
                android:layout_gravity="center_horizontal" android:textSize="@dimen/Text.Heading"
                />
        <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" android:minHeight="@dimen/SpacerDimension"
                android:focusable="true"/>
        <Button
                android:text="@string/movie_button"
                android:id="@+id/movieApp"
                style="@style/ButtonsAppLauncher"
                android:onClick="startMovieApp"/>
        <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" android:minHeight="@dimen/SpacerDimension"
                android:focusable="true"/>
        <Button
                android:text="@string/scores_button"
                android:id="@+id/scoresApp"
                style="@style/ButtonsAppLauncher"
                android:onClick="startScoresApp"/>
        <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" android:minHeight="@dimen/SpacerDimension"
                android:focusable="true"/>
        <Button
                android:text="@string/library_button"
                android:id="@+id/libraryApp"
                style="@style/ButtonsAppLauncher"
                android:onClick="startLibraryApp"/>

        <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" android:minHeight="@dimen/SpacerDimension"
                android:focusable="true"/>
        <Button
                android:text="@string/bigger_button"
                android:id="@+id/biggerApp"
                style="@style/ButtonsAppLauncher"
                android:onClick="startBiggerApp"/>
        <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" android:minHeight="@dimen/SpacerDimension"
                android:focusable="true"/>
        <Button
                android:text="@string/reader_button"
                android:id="@+id/readerApp"
                style="@style/ButtonsAppLauncher"
                android:onClick="startReaderApp"/>

        <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" android:minHeight="@dimen/SpacerDimension"
                android:focusable="true"/>
        <Button
                android:text="@string/capstone_button"
                android:id="@+id/capstoneApp"
                style="@style/ButtonsAppLauncher"
                android:background="#673AB7"
                android:onClick="startCapstoneApp"/>
    </LinearLayout>
</LinearLayout>
</ScrollView>